[metadata]
name = armada
summary = Armada - Deploying your chart fleet
description-file =
    README.md
author = Armada Team
license = Apache-2
classifier =
    Environment :: Kubernetes
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7

[files]
packages =
    armada
    hapi
    hapi.chart
    hapi.release
    hapi.services
    hapi.version

[entry_points]
console_scripts =
    armada = armada.app:main
armada =
    apply = armada.commands.apply:ApplyChartsCommand
