[metadata]
name = armada
summary = tool for managing multiple chart ocherstartion lifecycle
description-file = README.rst

author = armada team
home-page = http://armada-helm.readthedocs.io/en/latest/
classifier =
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5

[files]
packages =
    armada
    armada.cli
    armada.api
    armada.handlers
    hapi
    hapi.chart
    hapi.release
    hapi.services
    hapi.version

[build_sphinx]
source-dir = docs/source
build-dir = docs/build
all_files = 1
warning-is-error = True

[entry_points]
console_scripts =
    armada = armada.shell:main
armada =
    apply = armada.cli.apply:ApplyChartsCommand
    tiller = armada.cli.tiller:TillerServerCommand
    validate = armada.cli.validate:ValidateYamlCommand
    test = armada.cli.test:TestServerCommand

oslo.config.opts =
    armada.conf = armada.conf.opts:list_opts
oslo.policy.policies =
  armada = armada.common.policies:list_rules

[pbr]
warnerrors = True

[wheel]
universal = 1

[nosetests]
verbosity=3
with-doctest=1
